Increase menu spacing, resolve mobile issues.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,15 +10,16 @@
     box-sizing: inherit;
 }
 
-html,
-body {
-    /*height: 100%;*/
-    /*width: 100%;*/
-    /*margin: 0;*/
-    /*padding: 0;*/
-    /*overflow-x: hidden;*/
+@media(max-width: 767px) {
+    html,
+    body {
+        /*height: 100%;*/
+        /*width: 100%;*/
+        /*margin: 0;*/
+        /*padding: 0;*/
+        overflow-x: hidden;
+    }
 }
-
 
 body,
 button {
